src/test/deca/context/invalid/created/method-call-field.deca
//Description :
// Test d'un appel de méthode sur un attribut de la classe
//
// Resultats :
// Erreur

class A {
    int a = 2;
}


{
    A a = new A();
    a.a(2);
}
